[package]
name = "pring"
version = "0.1.0"
authors = ["Curt Brune <curt@brune.net>"]
edition = "2018"

[lib]
name = "pring"
path = "src/lib.rs"

[[bin]]
name = "pring"
path = "src/main.rs"

[dependencies]
anyhow       = "1.0"
byteorder    = "1.3"
dns-lookup   = "1.0"
env_logger   = "0.7"
log          = { version = "0.4", features = ["std"] }
structopt    = "0.3"
thiserror    = "1.0"
# pnet         = "0.26.0"
pnet         = { path = "../libpnet" }

[build-dependencies]
bindgen = "0.53"
